# random-picker

./: CMakeLists.txt  LICENSE  README.md  build.bat
include/: ai.h  cli.h  common.h  gui.h  http.h  logger.h  picker.h  reader.h
sample/: make_xlsx.py  students.csv  students.xlsx
src/: ai.cpp  cli.cpp  gui.cpp  http.cpp  logger.cpp  main.cpp  picker.cpp  reader.cpp
